--- a/_posts/2021-11-22-gardens-recreation-ma-ko.html
+++ b/_posts/2021-11-22-gardens-recreation-ma-ko.html
@@ -18,7 +18,7 @@ category: showcase
 </div>
 
 <p>This scene consists mostly of procedural geometry. For instance, the leaves are done through a compute shader that draws geometry (see picture). It works very similar to a grass system where you can paint the leaves onto objects. Each leaf can have a different color, scale, grow direction and normal. In this scene there are approximately 40.000 leaves. </p> 
-<p>For the rocks I roughly model a silhouette in Blender, which I then take it to Houdini. There I procedurally deform it and bake the height position and “ambient occlusion” into the vertex colors, which I later use in my shaders.</p>
+<p>For the rocks I roughly model a silhouette in Blender, which I then take to Houdini. There I procedurally deform it and bake the height position and “ambient occlusion” into the vertex colors, which I later use in my shaders.</p>
 
 <div class="grid-2">
     <div class="image-container round">
