--- a/_posts/2021-11-22-gardens-recreation-ma-ko.html
+++ b/_posts/2021-11-22-gardens-recreation-ma-ko.html
@@ -8,6 +8,29 @@ category: showcase
     <iframe width="560" height="315" src="https://www.youtube.com/embed/1dJUls22qqU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
+<div class="grid-2">
+    <div class="list-container round">
+        <h2>Main components</h2>
+        <ul>
+            <li>Custom data edge detection</li>
+            <li>Depth & normal edge detection</li>
+            <li>Compute shader vegetation</li>
+            <li>Semi-procedural rock models</li>
+            <li>Baked "ambient occlusion"</li>
+        </ul>
+    </div>
+    <div></div>
+    <div class="list-container round">
+        <h2>Tools used</h2>
+        <ul>
+            <li><i class="fas fa-cube"></i> Blender</li>
+            <li><i class="fas fa-cube"></i> Houdini (rocks)</li>
+            <li><i class="fas fa-chess-board"></i> <a href="https://github.com/alelievr/Mixture" target="_blank">Mixture</a> (noise texutres)</li>
+            <li><i class="fab fa-unity"></i> Unity</li>
+        </ul>
+    </div>
+</div>
+
 <h1>Description</h1>
 <p>This scene is an attempt to recreate this <a href="https://twitter.com/blurring_my_day/status/1442911760197971969" target="_blank">scene</a> drawn by <a href="https://twitter.com/blurring_my_day" target="_blank">Ma-ko</a> for <a href="https://twitter.com/GardensDevs" target="_blank">Gardens‘</a> upcoming game. The clip above shows my process frame by frame.</p>
 <p>The clip below shows a 3D view of the scene, with the camera swinging from left to right. It also shows a custom data pass, the outline pass and the scene without outlines.</p>
@@ -32,28 +55,7 @@ category: showcase
     </div>
 </div>
 
-<div class="grid-2">
-    <div class="list-container round">
-        <h2>Main components</h2>
-        <ul>
-            <li>Custom data edge detection</li>
-            <li>Depth & normal edge detection</li>
-            <li>Leaves compute shader</li>
-            <li>Semmi-procedural rock models</li>
-            <li>Baked "ambient occlusion"</li>
-        </ul>
-    </div>
-    <div></div>
-    <div class="list-container round">
-        <h2>Tools used</h2>
-        <ul>
-            <li><i class="fas fa-cube"></i> Blender</li>
-            <li><i class="fas fa-cube"></i> Houdini (rocks)</li>
-            <li><i class="fas fa-chess-board"></i> <a href="https://github.com/alelievr/Mixture" target="_blank">Mixture</a> (noise texutres)</li>
-            <li><i class="fab fa-unity"></i> Unity</li>
-        </ul>
-    </div>
-</div>
+
 
 <h1>Acknowledgements</h1>
 <p>The first 2 parts of <a href="https://www.sidefx.com/tutorials/magic-market-procedural-rocks/" target="_blank">this</a> tutorial helped me get started on the procedural rock modelling in Houdini.</p>
