--- a/_posts/2021-11-22-gardens-recreation-ma-ko.html
+++ b/_posts/2021-11-22-gardens-recreation-ma-ko.html
@@ -26,7 +26,7 @@ category: showcase
             <li><i class="fas fa-cube"></i> Blender</li>
             <li><i class="fas fa-cube"></i> Houdini (rocks)</li>
             <li><i class="fas fa-chess-board"></i> <a href="https://github.com/alelievr/Mixture" target="_blank">Mixture</a> (noise texutres)</li>
-            <li><i class="fab fa-unity"></i> Unity</li>
+            <li><i class="fab fa-unity"></i> Unity URP</li>
         </ul>
     </div>
 </div>
