--- a/_posts/2021-10-18-art-recreation-malin.html
+++ b/_posts/2021-10-18-art-recreation-malin.html
@@ -2,6 +2,7 @@
 title: Art recreation (Malin)
 layout: post
 category: showcase
+preview-video: assets/posts/2021/art-recreation-malin/preview.mp4
 ---
 
 <div class="youtube-container">
