--- a/_posts/2021-12-06-windfall-prototype.html
+++ b/_posts/2021-12-06-windfall-prototype.html
@@ -2,6 +2,7 @@
 title: Windfall (prototype)
 layout: post
 category: showcase
+preview-video: assets/posts/2021/windfall-prototype/preview.mp4
 ---
 
 <div class="youtube-container">
