--- a/_posts/2021-10-22-god-of-lines.html
+++ b/_posts/2021-10-22-god-of-lines.html
@@ -2,6 +2,7 @@
 title: God of Lines
 layout: post
 category: showcase
+preview-video: assets/posts/2021/god-of-lines/preview.mp4
 ---
 
 <div class="youtube-container">
