--- a/_posts/2021-11-22-gardens-recreation-ma-ko.html
+++ b/_posts/2021-11-22-gardens-recreation-ma-ko.html
@@ -9,8 +9,8 @@ preview-video: assets/posts/2021/gardens-recreation-ma-ko/preview.mp4
     <iframe width="560" height="315" src="https://www.youtube.com/embed/1dJUls22qqU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
-<div class="grid-2">
-    <div class="list-container round">
+<div class="grid__maxcolumns--2 grid__align--bottom">
+    <div class="container__list round">
         <h2>Main components</h2>
         <ul>
             <li>Custom data edge detection</li>
@@ -20,8 +20,7 @@ preview-video: assets/posts/2021/gardens-recreation-ma-ko/preview.mp4
             <li>Baked "ambient occlusion"</li>
         </ul>
     </div>
-    <div></div>
-    <div class="list-container round">
+    <div class="container__list round">
         <h2>Tools used</h2>
         <ul>
             <li><i class="fas fa-cube"></i> Blender</li>
