--- a/_posts/2021-11-22-gardens-recreation-ma-ko.html
+++ b/_posts/2021-11-22-gardens-recreation-ma-ko.html
@@ -3,6 +3,8 @@ title: Gardens recreation (Ma-ko)
 layout: post
 category: showcase
 preview-video: assets/posts/2021/gardens-recreation-ma-ko/preview.mp4
+pagination: 
+  enabled: true
 ---
 
 <div class="youtube-container">
