--- a/_posts/2021-10-22-god-of-lines.html
+++ b/_posts/2021-10-22-god-of-lines.html
@@ -3,6 +3,8 @@ title: God of Lines
 layout: post
 category: showcase
 preview-video: assets/posts/2021/god-of-lines/preview.mp4
+pagination: 
+  enabled: true
 ---
 
 <div class="youtube-container">
