--- a/_posts/Tutorials/2021-11-02-shadow-outlines-tutorial.html
+++ b/_posts/Tutorials/2021-11-02-shadow-outlines-tutorial.html
@@ -69,7 +69,7 @@ category: tutorial
 
 <p>For the rest of the tutorial you can ignore the ShadowCaster pass, as the shadows and outlines are calculated and applied in the ForwardLit pass.</p>
 
-<button class="collapsible round">Code snippet</button>
+<button class="collapsible round">Code block</button>
 <div class="collapsible__content round">
     <pre><code class="language-hlsl">Shader "KelvinvanHoorn/ShadowOutlines"
     {
