--- a/_posts/Tutorials/2021-11-02-shadow-outlines-tutorial.html
+++ b/_posts/Tutorials/2021-11-02-shadow-outlines-tutorial.html
@@ -71,7 +71,7 @@ category: tutorial
 
 <button class="collapsible round">Code block</button>
 <div class="collapsible__content round ">
-    <pre class="line-numbers"><code class="language-hlsl">Shader "KelvinvanHoorn/ShadowOutlines"
+    <div class="container__code"><pre class="line-numbers"><code class="language-hlsl">Shader "KelvinvanHoorn/ShadowOutlines"
 {
     Properties
     {
@@ -186,7 +186,7 @@ category: tutorial
             ENDHLSL
         }
     }
-}</code></pre>
+}</code></pre></div>
 </div>
 
 <h2 id="urp-asset">1.2 URP asset</h2>
@@ -205,16 +205,17 @@ category: tutorial
 
 <p>In order to access the shadow map and relevent functions we need to add the <mark>Lighting.hlsl</mark> include file. We do this by adding the following highlighted line to our ForwardLit pass just below our other #include line.</p>
 
-<pre class="line-numbers round" data-line="2"><code class="language-hlsl">#include "Packages/com.unity.render-pipelines.universal/ShaderLibrary/Core.hlsl"
-#include "Packages/com.unity.render-pipelines.universal/ShaderLibrary/Lighting.hlsl"</code></pre>
+<div class="container__code"><pre class="line-numbers round" data-line="2"><code class="language-hlsl">#include "Packages/com.unity.render-pipelines.universal/ShaderLibrary/Core.hlsl"
+#include "Packages/com.unity.render-pipelines.universal/ShaderLibrary/Lighting.hlsl"</code></pre></div>
 
 <p>Before we can sample the shadow map we first need to calculate the <mark>shadowCoord</mark>. We do this by calling the <mark>TransformWorldToShadowCoord</mark> function is our fragment shader and passing it our world position. Add the following highlighted line to the <mark>frag</mark> function.</p>
 
-<pre class="line-numbers round" data-line="3"><code class="language-hlsl">float4 frag (Varyings IN) : SV_Target
+<div class="container__code"><pre class="line-numbers round" data-line="3"><code class="language-hlsl">float4 frag (Varyings IN) : SV_Target
 {
     float4 shadowCoord = TransformWorldToShadowCoord(IN.posWS);
                     
     float3 col = float3(1, 1, 1);
     
     return float4(col, 1);
-}</code></pre>
+}</code></pre></div>
+
