--- a/_posts/Tutorials/2021-11-02-shadow-outlines-tutorial.html
+++ b/_posts/Tutorials/2021-11-02-shadow-outlines-tutorial.html
@@ -6,7 +6,7 @@ blurb: In this tutorial I will show you how to sample the shadow map of the main
 ---
 
 <div class="image-container round">
-    <video src="/assets//posts/tutorials/shadow-outlines-tutorial/preview.mp4" autoplay muted loop class="round"></video>
+    <video src="/assets//posts/tutorials/shadow-outlines-tutorial/preview.mp4" autoplay muted loop></video>
 </div>
 
 
