--- a/Showcases/index.html
+++ b/Showcases/index.html
@@ -12,4 +12,4 @@ previewPostsPerPage: 9
 
 <button onclick="increasePageLimit()" id="loadMorePostsBtn" title="load more posts">Load more posts...</button>
 
-{% include preview-list.html %}
+{% include preview-list-simple.html %}
