--- a/_posts/Tutorials/2021-11-02-shadow-outlines-tutorial.html
+++ b/_posts/Tutorials/2021-11-02-shadow-outlines-tutorial.html
@@ -301,7 +301,7 @@ float3 col = float3(1, 1, 1) * shadowMap;</code></pre></div>
 </div>
 
 <div class="grid__columns--exactly2 grid__align--bottom">
-    <div class="container image__container round">
+    <div class="container image__container round margin--vertical">
         <img src="/assets/posts/tutorials/shadow-outlines-tutorial/URPSettings.png" alt="I will be using the following settings for the rest of this tutorial." class="image__caption image__modal round">
     </div>
     <div></div>
