--- a/_posts/Tutorials/2021-11-02-shadow-outlines-tutorial.html
+++ b/_posts/Tutorials/2021-11-02-shadow-outlines-tutorial.html
@@ -79,8 +79,8 @@ preview-video: assets//posts/tutorials/shadow-outlines-tutorial/preview.mp4
 <p>For the rest of the tutorial you can ignore the ShadowCaster pass, as the shadows and outlines are calculated and applied in the ForwardLit pass.</p>
 
 <button class="collapsible round">Code block</button>
-<div class="collapsible__content round ">
-    <div class="container__code"><pre class="line-numbers"><code class="language-hlsl">Shader "KelvinvanHoorn/ShadowOutlines"
+<div class="collapsible__content round code">
+    <pre class="line-numbers" style="margin:0;"><code class="language-hlsl">Shader "KelvinvanHoorn/ShadowOutlines"
 {
     Properties
     {
@@ -195,7 +195,8 @@ preview-video: assets//posts/tutorials/shadow-outlines-tutorial/preview.mp4
             ENDHLSL
         }
     }
-}</code></pre></div>
+}</code></pre>
+    <!-- </div> -->
 </div>
 
 <h2 id="urp-asset">1.2 URP asset</h2>
